Token auth refactor to middleware, check token at create article
