# src/controllers/article.controller.ts
@@ -1,5 +1,5 @@
 import { Request, Response, query } from "express";
-import { Body, Example, Get, Patch, Post, Query, Route } from "tsoa";
+import { Body, Example, Get, Header, Patch, Post, Query, Route } from "tsoa";
 import { AppDataSource } from "../data-source";
 import { Article } from "../entity/article.entity";
 import { controller as TokenController } from "../routes/token.router";
@@ -55,6 +55,8 @@ export default class ArticleController {
     * Cikk létrehozása
     * @param params
     * @example params {"title":"Mosógép", "description": "Nagyon hasznos, ki tudja mosni a ruhákat meg egyéb textiliákat."}
+    * @param token
+    * @example token "2f0c60af-1a50-11ee-b92b-2cf05d2e710e"
     */
     @Example<responseCreateArticle>({
         id: 1,
@@ -68,7 +70,7 @@ export default class ArticleController {
         }
     })
     @Post("/create")
-    public async createArticle(@Body() params: articleParameters): Promise<responseCreateArticle> {
+    public async createArticle(@Header() token: string, @Body() params: articleParameters): Promise<responseCreateArticle> {
         if(params.title.length > 100) {
             return { error: { message: 'A title hossza maximum 100 karakter lehet.', code: 422 } }
         }
@@ -81,6 +83,11 @@ export default class ArticleController {
         const saveResult = await articleRepository.save(createResult);
         if(!saveResult) {
             return { error: { message: 'Váratlan adatbázishiba történt a művelet során.', code: 500 } }
+        }
+
+        const decrementResult = await TokenController.decrementRemaining(token);
+        if(!decrementResult.success) {
+            return { error: decrementResult.error };
         }
 
         return {
@@ -96,7 +103,7 @@ export default class ArticleController {
         * @param id
         * @example id "15"
         * @param token
-        * @example token "77464b35-7631-4ab1-b2d8-9f1800a0aa4f"
+        * @example token "2f0c60af-1a50-11ee-b92b-2cf05d2e710e"
         * 
     */
      @Example<responseDetailArticle>({
@@ -110,13 +117,8 @@ export default class ArticleController {
             code: 500
         }
     })
-    @Get("/detail/{id}/{token}")
-    public async detailArticle(id: number, token: string): Promise<responseDetailArticle> {
-        const isTokenValid = await TokenController.doesTokenExists(token, true);
-        if(!isTokenValid) {
-            return { error: { message: 'A megadott token nem létezik, vagy már nem használható fel.', code: 403 } };
-        }
-        
+    @Get("/detail/{id}")
+    public async detailArticle(id: number, @Header() token: string): Promise<responseDetailArticle> {
         const entityArticle = await articleRepository.findOneBy({ id: id });
         if(!entityArticle) {
             return { error: { message: 'A megadott azonosítóval nem található cikk.', code: 403 } };
